--- a/WebNangCao/MasterPage.Master
+++ b/WebNangCao/MasterPage.Master
@@ -63,7 +63,7 @@
                                     <img src="/images/vvv.png" alt="" /></a>
                             </div>
                             <div class="cart" style="font-size: 22px;">
-                                <p>Welcome to our TaKa!</p>
+                                <p>Chào mừng đến với TaKa!</p>
                                 <div>
                                     <p>
                                         <span>Cart:</span><div style="display: inline-block; font-size: 0.9em; margin: 0 auto; padding: 0px 5px; outline: none;">
