--- a/WebNangCao/css/style.css
+++ b/WebNangCao/css/style.css
@@ -450,7 +450,7 @@ dding: 20px 0;
     }*/
 
 .images_1_of_4 {
-    width: 25%;
+    width: 23% !important;
     padding: 1.5%;
     text-align: center;
     position: relative;
